--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <include src="src/partials/header.html"></include>
+  <include src="src/partials/banner.html"></include>
+
   <script src="../assets/scripts/index.js"></script>
 </body>
 
