started working on adaptation of header for different displays

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,8 +11,11 @@
 </head>
 
 <body>
+  <div class="underlay"></div>
   <include src="src/partials/header.html"></include>
-  <include src="src/partials/banner.html"></include>
+  <include src="src/partials/suggestions.html"></include>
+
+
 
   <script src="../assets/scripts/index.js"></script>
 </body>
