--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,11 @@
 <body>
   <div class="underlay"></div>
   <include src="src/partials/header.html"></include>
-  <include src="src/partials/suggestions.html"></include>
+  <div class="container">
+    <include src="src/partials/suggestions.html"></include>
+  </div>
+  <include src="src/partials/product.html"></include>
+
 
 
 
