added advantages section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,6 +17,9 @@
     <include src="src/partials/suggestions.html"></include>
   </div>
   <include src="src/partials/product.html"></include>
+  <div class="container">
+    <include src="src/partials/advantages.html"></include>
+  </div>
 
 
 
