added popular items section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,7 +20,9 @@
   <div class="container">
     <include src="src/partials/advantages.html"></include>
   </div>
-
+  <div class="container">
+    <include src="src/partials/hot-products.html"></include>
+  </div>
 
 
 
