--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,7 +23,9 @@
   <div class="container">
     <include src="src/partials/hot-products.html"></include>
   </div>
-
+  <div class="container">
+    <include src="src/partials/footer.html"></include>
+  </div>
 
 
   <script src="../assets/scripts/index.js"></script>
