--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,12 +19,12 @@
   <div class="container">
     <include src="src/partials/advantages.html"></include>
   </div>
-  <div class="container">
+  <!-- <div class="container">
     <include src="src/partials/hot-products.html"></include>
-  </div>
-  <div class="container">
+  </div> -->
+  <!-- <div class="container">
     <include src="src/partials/footer.html"></include>
-  </div>
+  </div> -->
 
 
   <script src="../assets/scripts/index.js"></script>
