renewed media quaries

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,15 +16,15 @@
     <include src="src/partials/suggestions.html"></include>
   </div>
   <include src="src/partials/product.html"></include>
-  <div class="container">
+  <div class="container aligned">
     <include src="src/partials/advantages.html"></include>
   </div>
-  <!-- <div class="container">
+  <div class="container aligned">
     <include src="src/partials/hot-products.html"></include>
-  </div> -->
-  <!-- <div class="container">
+  </div>
+  <div class="container aligned">
     <include src="src/partials/footer.html"></include>
-  </div> -->
+  </div>
 
 
   <script src="../assets/scripts/index.js"></script>
