--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,10 @@
 
 <body>
   <div class="underlay"></div>
-  <include src="src/partials/header.html"></include>
+  <include src="src/partials/header.html">
+  </include>
+  <include src="src/partials/banner.html"></include>
+
   <div class="container">
     <include src="src/partials/suggestions.html"></include>
   </div>
