fixed issue with  header's white colored items

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-  <div class="underlay"></div>
-  <include src="src/partials/header.html">
-  </include>
-  <include src="src/partials/banner.html"></include>
-
-  <div class="container">
-    <include src="src/partials/suggestions.html"></include>
+  <div class="page-index">
+    <div class="underlay"></div>
+    <include src="src/partials/header.html">
+    </include>
+    <include src="src/partials/banner.html"></include>
+    <div class="container">
+      <include src="src/partials/suggestions.html"></include>
+    </div>
+    <include src="src/partials/product.html"></include>
+    <div class="container aligned">
+      <include src="src/partials/advantages.html"></include>
+    </div>
+    <div class="container aligned">
+      <include src="src/partials/hot-products.html"></include>
+    </div>
+    <div class="container aligned">
+      <include src="src/partials/footer.html"></include>
+    </div>
   </div>
-  <include src="src/partials/product.html"></include>
-  <div class="container aligned">
-    <include src="src/partials/advantages.html"></include>
-  </div>
-  <div class="container aligned">
-    <include src="src/partials/hot-products.html"></include>
-  </div>
-  <div class="container aligned">
-    <include src="src/partials/footer.html"></include>
-  </div>
-
 
   <script src="../assets/scripts/index.js"></script>
 </body>
