added hover state for links

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -30,7 +30,7 @@
               <label for="rememberme">Keep me signed in</label>
             </div>
 
-            <a href="#">Forgot password?</a>
+            <a href="#" class="auth_link">Forgot password?</a>
           </div>
           <div class="form_buttons auth-socials">
             <a href="" class="auth-socials_link auth-socials_link--facebook button">
@@ -48,7 +48,7 @@
           </div>
           <div class="form_field form_field--centryfied">
             <span>Not a member yet?
-              <a href="#" class="sign-up">Sign up</a>
+              <a href="#" class="auth_link">Sign up</a>
             </span>
           </div>
         </form>
